// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KCCard snapshot — pressable card 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#FFFCF7",
      "borderColor": "#EDE3CD",
      "borderRadius": 20,
      "borderWidth": 1,
      "elevation": 2,
      "opacity": 1,
      "padding": 18,
      "shadowColor": "#1B1006",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 8,
    }
  }
>
  <Text>
    Pressable Card
  </Text>
</View>
`;

exports[`KCCard snapshot — static card 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFCF7",
        "borderColor": "#EDE3CD",
        "borderRadius": 20,
        "borderWidth": 1,
        "padding": 18,
        "shadowColor": "#1B1006",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 8,
      },
      {
        "elevation": 2,
      },
      undefined,
    ]
  }
>
  <Text>
    Static Card
  </Text>
</View>
`;
